--- a/Sequence2SequenceModel_pytorch.ipynb
+++ b/Sequence2SequenceModel_pytorch.ipynb
@@ -7,7 +7,9 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyMxPXNX9MuQd9jfU3sABLwX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/shiva-lab/Walmart-M5_AccuracyPrediction/blob/master/Sequence2SequenceModel_pytorch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -4812,13 +4824,7 @@
         "colab_type": "text"
       },
       "source": [
-        "A difference transform is a simple way for removing a systematic structure from the time series.\n",
-        "\n",
-        "For example, a trend can be removed by subtracting the previous value from each value in the series. This is called first order differencing. The process can be repeated (e.g. difference the differenced series) to remove second order trends, and so on.\n",
-        "\n",
-        "A seasonal structure can be removed in a similar way by subtracting the observation from the prior season, e.g. 12 time steps ago for monthly data with a yearly seasonal structure.\n",
-        "\n",
-        "Usually, it is good to clean Sesonabilty and trends from time series before we feed the data to the model As an illustration, I chose a simple time difference to transform for seven days But you can try a different days number or use more complex statistical models to remove seasonable or trends The transform is done by Simple Difference transform --> X(t)' = X(t) - X(t-7)"
+        "A difference transform is a simple way for removing a systematic structure from the time series.\n"
       ]
     },
     {
@@ -4937,6 +4943,7 @@
         "colab": {}
       },
       "source": [
+        "#Normalize data using the min/max scaler with minimum and maximum values of -1 and 1, respectively\n",
         "scaler = MinMaxScaler((-1,1)).fit(train_data)\n",
         "#scaler = StandardScaler().fit(train_data)\n",
         "train_data_std = scaler.transform(train_data)\n",
@@ -5004,16 +5011,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AJlHk5aLANNx",
-        "colab_type": "text"
-      },
-      "source": [
-        "It is common not to feed the entire data to the network (to the encoder) But to break it into sequences and windows as illustrated below"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "hrnJwMs8HLzv",
@@ -5043,42 +5040,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We wil use a sliding window of 90 days Our target(labels) is 28 days"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "VyHr-jniGlv6",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "a42ff9e2-2a16-448d-ba79-5dc7d78cbd31"
-      },
-      "source": [
-        "seq_length = 90\n",
-        "labels_length =28\n",
-        "train_X, train_y = sliding_windows(train_data_std, seq_length,labels_length)\n",
-        "print(\"train X  has:\", len(train_X) , \"series\")\n",
-        "print(\"train labels  has:\", len(train_y) , \"series\")\n",
-        "valid_X, valid_y = sliding_windows(valid_data_std, seq_length,labels_length)\n",
-        "print(\"validiation  X  has:\", len(valid_X) , \"series\")\n",
-        "print(\"Validiation  labels  has:\" ,len(valid_y) , \"series\")"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "train X  has: 1137 series\n",
-            "train labels  has: 1137 series\n",
-            "validiation  X  has: 498 series\n",
-            "Validiation  labels  has: 498 series\n"
-          ],
-          "name": "stdout"
-        }
+        "I wil use a sliding window of 90 days Our target(labels) is 28 days"
       ]
     },
     {
@@ -5265,7 +5227,7 @@
       "source": [
         "The Encoder structure is very similar to an LSTM/RNN network for sequence modeling/training.\n",
         "\n",
-        "The difference is that we output the Hidden and Cell states (cell in case of LSTM) of the last cell, as an output to feed it to the decoder."
+        "The difference is that we output the Hidden and Cell states of the last cell, as an output to feed it to the decoder."
       ]
     },
     {
@@ -5310,16 +5272,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "06roPF7XJBgC",
-        "colab_type": "text"
-      },
-      "source": [
-        "This will take in the previous hidden state of the encoder/decoder,  𝑠𝑡−1 , and all of the stacked forward and backward hidden states from the encoder,  𝐻 . The layer will output an attention vector,  𝑎𝑡 , that is the length of the source sentence, each element is between 0 and 1 and the entire vector sums to 1."
-      ]
     },
     {
       "cell_type": "code",
@@ -5385,14 +5337,10 @@
         "colab_type": "text"
       },
       "source": [
-        "Decoder\n",
-        "The Decoder is a bit more tricky part\n",
+        "Decoder:\n",
         "\n",
-        "We feed the Hidden state and the cell state of the last cell of the Encoder\n",
-        "We use RNN (in this case LSTM)\n",
-        "We predict using the first cell, and then we iterate (using our prediction)\n",
-        "  to create N-1 more predictions (in this case overall of 28 TS samples)\n",
-        "It also use the Attention layer"
+        " predict using the first cell, and then iterate (using our prediction)\n",
+        "  to create overall of 28 TS samples\n"
       ]
     },
     {
@@ -5819,7 +5767,7 @@
       "source": [
         "**Predict:**\n",
         "\n",
-        "To illustrate the model let's take, the last 28 days available as our target for prediction and the previous 90 days as the input to the model We take it from the original series, and we need to issue the transformation again"
+        " take, the last 28 days available as our target for prediction and the previous 90 days as the input to the model We take it from the original series, and we need to issue the transformation again"
       ]
     },
     {
@@ -5846,6 +5794,7 @@
         "colab": {}
       },
       "source": [
+        "#Diff transform\n",
         "TestX_Diff = difference(TestX, interval)\n",
         "TestX_Diff_Norm = scaler.transform(np.array(TestX_Diff).reshape(len(TestX_Diff),1))"
       ],
@@ -5860,7 +5809,7 @@
         "colab": {}
       },
       "source": [
-        "######Prediction###############\n",
+        "####Prediction\n",
         "model.load_state_dict(torch.load('best_model.pt'))\n",
         "model.eval()\n",
         "\n",
@@ -5895,19 +5844,8 @@
       },
       "source": [
         "**Inverse Difference transform**\n",
-        "This one is more tricky, and we need to do the following.\n",
         "\n",
-        "X(t) = X(t)' + X(t-7)\n",
-        "x(t)' is the sample after the iffernce transformaition at time\n",
-        "X(t) is regular sample at time t\n",
-        "x(t-7) is the regular sample at current time minus 7 days\n",
-        "The Diff formula is\n",
-        "X(t)' = X(t) - X(t-7)\n",
-        "We want X(t) now so\n",
-        "\n",
-        "X(t) = X(t)' + X(t-7)\n",
-        "\n",
-        "conctnate the original 90 days (input) to the prediction (which is in diff transform domain) , use the formula to update all predicted 28 days"
+        "conctnate the original 90 days (input) to the prediction (which is in diff transform domain) "
       ]
     },
     {
@@ -7147,16 +7085,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "do2a72e3qTeK",
-        "colab_type": "text"
-      },
-      "source": [
-        "**Pytorch Tensor**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "0YUUP_NiqQJN",
@@ -7542,7 +7470,6 @@
       "source": [
         "optimizer = torch.optim.Adam(model.parameters(), lr=1e-2,weight_decay=1e-5)\n",
         "criterion = torch.nn.MSELoss().to(device) \n",
-        "#scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max = 5e-3, eta_min=1e-8, last_epoch=-1)\n",
         "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer,  patience=10, factor =0.5 ,min_lr=1e-7, eps=1e-08)"
       ],
       "execution_count": null,
@@ -7565,7 +7492,7 @@
         "  trainX,trainy,\n",
         "  validX,validy,\n",
         "  seq_length,\n",
-        "  n_epochs=10, #Train for few epochs as illustration, \n",
+        "  n_epochs=10,  \n",
         "    \n",
         ")\n"
       ],
